<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical">
        <include layout="@layout/activity_header" />
    
    <TextView
        style="@style/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose" />

    <ExpandableListView
        android:id="@+id/lv_exp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:background="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/save"
            style="@style/button"
            android:layout_width="100dp"
            android:layout_marginRight="10dp"
            android:text="@string/save" />

        <TextView
            android:id="@+id/skip"
            style="@style/button"
            android:layout_width="100dp"
            android:layout_marginLeft="10dp"
            android:text="@string/skip"
            android:textStyle="normal" />
    </LinearLayout>

</LinearLayout>